fixes anchor link and alignment of the logo | ETSL-1361

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/accessories-card.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/accessories-card.scss
@@ -14,20 +14,20 @@
     justify-content: center;
     align-items: center;
   }
-  .brands-logo{
-    .scrollbar{
+  .brands-logo {
+    .scrollbar {
       @include respond-to-min($desktop) {
         padding-left: $padding-step-1;
         padding-right: $padding-step-2;
       }
     }
   }
-   .scrollbar{
-      @include respond-to-min($desktop) {
-        padding-left: toRem(12);
-        padding-right: toRem(12);
-      }
+  .scrollbar {
+    @include respond-to-min($desktop) {
+      padding-left: toRem(12);
+      padding-right: toRem(12);
     }
+  }
 }
 .card-li {
   display: flex;
@@ -819,7 +819,7 @@
     .eti-big-card-li {
       flex: 1;
     }
-    
+
     @include respond-to-min($desktop-wide) {
       margin: auto;
       max-width: 1100px;
@@ -868,7 +868,7 @@
         right: auto;
       }
       &:after {
-        border: solid $dark-gray;
+        border: solid #242424;
         border-width: $border-step-0 $border-step-2 $border-step-2 $border-step-0;
         padding: toRem(4);
         content: "";
@@ -883,7 +883,7 @@
     .next {
       right: -72px;
       &:after {
-        border: solid $dark-gray;
+        border: solid #242424;
         border-width: $border-step-0 $border-step-2 $border-step-2 $border-step-0;
         padding: toRem(4);
         content: "";
@@ -903,6 +903,17 @@
     @include respond-to-max($desktop) {
       display: none;
     }
+
+    @include respond-to-min($desktop-wide) {
+      margin: auto;
+      max-width: 1100px;
+    }
+
+    @include respond-to-min($desktop-large) {
+      margin-top: toRem(20);
+      margin-bottom: $margin-step-2;
+    }
+
     .swiper-scrollbar-drag {
       background: $main-green;
     }
@@ -1050,10 +1061,10 @@ general third action link
   .scrollbar {
     background-color: $steel-grey;
     .swiper-scrollbar-drag {
-    background-color: $white;
+      background-color: $white;
+    }
   }
-  }
-  
+
   .title p,
   .third-action-wrapper.action-link .link:before,
   a.link {
@@ -1065,7 +1076,7 @@ general third action link
   .eti-recommendation-wrapper,
   .card-list-wrapper,
   .eti-recommendation-big-card {
-    &.has-bg{
+    &.has-bg {
       background-color: $black;
     }
     .scrollbar {
